<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".activity.streaming.RTCStreamingActivity">

    <com.qiniu.pili.droid.rtcstreaming.demo.ui.CameraPreviewFrameView
        android:id="@+id/cameraPreview_surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <include layout="@layout/focus_indicator" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="5dp" >

        <FrameLayout
            android:id="@+id/RemoteWindowA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:clickable="true"
            android:onClick="onClickRemoteWindowA" >
            <com.qiniu.pili.droid.rtcstreaming.RTCSurfaceView
                android:id="@+id/RemoteGLSurfaceViewA"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:visibility="invisible"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_gravity="top|right"
                android:background="@drawable/bg_pressed"
                android:onClick="onClickKickoutUserA" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/RemoteWindowB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:clickable="true"
            android:onClick="onClickRemoteWindowB" >
            <com.qiniu.pili.droid.rtcstreaming.RTCSurfaceView
                android:id="@+id/RemoteGLSurfaceViewB"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:visibility="invisible"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_gravity="top|right"
                android:background="@drawable/bg_pressed"
                android:onClick="onClickKickoutUserB" />
        </FrameLayout>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_switch_camera"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/bg_pressed"
        android:onClick="onClickSwitchCamera" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_margin="15dp"
        android:layout_gravity="top|right"
        android:background="@drawable/bg_pressed"
        android:onClick="onClickExit" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
        <CheckBox
            android:id="@+id/ConferenceCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="连麦"
            android:visibility="invisible" />
        <CheckBox
            android:id="@+id/MuteCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="2dp"
            android:button="@drawable/mute_btn_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|left"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/StatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/StatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        app:fab_labelStyle="@style/label_style"
        app:fab_labelsPosition="right" >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/get_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickGetParticipants"
            app:fab_title="获取人数"
            app:fab_size="mini"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/toggle_playback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickTogglePlayback"
            app:fab_title="@string/button_start_playback"
            app:fab_size="mini"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/adjust_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickAdjustBitrate"
            app:fab_title="@string/button_adjust_bitrate"
            app:fab_size="mini"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickCaptureFrame"
            app:fab_title="@string/button_capture"
            app:fab_size="mini" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPreviewMirror"
            app:fab_title="@string/button_preview_mirror"
            app:fab_size="mini" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickEncodingMirror"
            app:fab_title="@string/button_encoding_mirror"
            app:fab_size="mini" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/muteSpeaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickMuteSpeaker"
            app:fab_size="mini"
            app:fab_title="@string/button_mute_speaker" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <FrameLayout
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开始直播"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColor="@android:color/white"
            android:background="@drawable/blue_btn_selector"
            android:onClick="onClickStreaming" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <Button
            android:onClick="onClick"
            android:id="@+id/lsq_smart_beauty_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="滤镜" />

        <Button
            android:onClick="onClick"
            android:id="@+id/sticker_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="贴纸"
            android:layout_below="@+id/lsq_smart_beauty_btn"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

    <!-- 滤镜栏 -->
    <RelativeLayout
        android:visibility="gone"
        android:layout_gravity="bottom"
        android:id="@+id/lsq_filter_group_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lsq_color_white"
        android:layout_alignParentBottom="true"
        android:paddingLeft="8dp" >

        <include
            layout="@layout/smart_beauty_layout" />

    </RelativeLayout>

    <!-- 贴纸栏 -->
    <android.support.v7.widget.RecyclerView
        style="@style/lsq_sticker_list_view"
        android:layout_gravity="bottom"
        android:background="@color/lsq_color_semitransparent"
        android:layout_alignParentBottom="true"
        android:id="@+id/lsq_sticker_list_view"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </android.support.v7.widget.RecyclerView>

</FrameLayout>
